<resources>
    <string name="app_name">Deklarasi MDF</string>
    <string name="welcome">Selamat Datang</string>
    <string name="copyrights">Benih MDF 2020 V3.0 (Untuk Kalangan Sendiri)</string>
    <string name="declaration">Deklarasi</string>
    <string name="fav_declaration">Deklarasi Favorit</string>
    <string name="spiritual_warfare">Peperangan Rohani</string>
    <string name="library">Pengajaran</string>
    <string name="setting">Pengaturan</string>
    <string name="search_declaration">Cari Deklarasi</string>
    <string name="ops">Oops...</string>
    <string name="search_declaration_not_found">Deklarasi yang kamu cari gak ketemu</string>
    <string name="theme">Tema</string>
    <string name="theme_decs">Atur tema pada aplikasi sesuai dengan keinginan anda.</string>
    <string name="about">Tentang Aplikasi Ini</string>
    <string name="shofar_sound">Suara Shofar</string>
    <string name="supporting_verse_for_spiritual_warfare">Ayat Support Peperangan Rohani</string>
    <string name="verse_for_spiritual_warfare">Ayat Peperangan Rohani</string>
    <string name="search_spiritual_warfare_verse">Cari Ayat Peperangan</string>
    <string name="search_verse">Cari Ayat Peperangan Rohani</string>
    <string name="search_verse_not_found">Ayat yang kamu cari gak ketemu</string>
    <string name="search_library">Cari Pengajaran</string>
    <string name="search_library_not_found">Pengajaran yang kami cari gak ketemu</string>
    <string name="dek_sma_bahtera">
        &lt;p>Di dalam nama Tuhan Yesus Kristus, kami sapu
bersih, sikat habis semua yang mau mengganggu,
mencuri, membunuh dan membinasakan Keluarga
besar kami, semua orang yang berhubungan darah
dengan kami, semua jiwa - jiwa yang kami layani
dan topang dengan doa - doa kami, semua orang
yang memberkati kami, mengcover kami, menuntun
kami kepada jalan kebenaran dan seluruh penduduk
seluruh kota dan bangsa Indonesia.&lt;/p>
&lt;h4>&lt;font color=#F25F5C>1. SAPU BERSIH &lt;h4>&lt;/font>
&lt;p align="justify>Kami sapu bersih dan sikat habis semua yang
bukan dari Tuhan, dengan puting beliung yang
dari Tuhan. Kami tolak dan batalkan semua
rencana iblis hari ini.&lt;/p>
&lt;p>Kami ikat dan sapu bersih, sikat habis ke empat
kuda dan penunggangnya, naga merah,
penyesat, pembinasa keji, lewiatan, beruang,
iluminati, belial/pendurhaka, cinta akan dunia,
antikris, roh pendakwa, lilith, dan semua
pasukannya dihabiskan oleh darah Anak Domba.
Kami sapu bersih, sikat habis,semua senjata
mereka, semua tipu muslihat, semua jebakan,
semua yang iblis coba sodorkan: cinta akan
uang, intimidasi, sakit penyakit dan kelemahan
tubuh, maut, kecelakaan, bencana,
pemberontakan dsb. Segala senjata yang
ditempa terhadap kami anak-anak Tuhan dan
Indonesia tidak akan berhasil, karena semuanya
dihabiskan.&lt;/p>
&lt;p>Kami sapu bersih, sikat habis, libas tuntas, kami
habiskan ; Semua yang garang, semua paham
yang radikal, semua kekerasan, semua jaringan
terorisme, kemarahan, kebencian, dll dari setiap
masjid–masjid, langgar-langgar, pesantren,
mushola, dari BUMN–BUMN, dari seluruh
lapisan masyarakat, dari kepolisian, dari TNI dsb,
dari kota besar, kota kecil, kampung–kampung,
pegunungan, pedalaman.&lt;/p>

&lt;h4>&lt;font color=#F25F5C>2. MENGAKTIFKAN MALAIKAT &lt;/h4>&lt;/font>
&lt;p>kami berkata dalam nama Tuhan Yesus, kami
aktifkan semua sayap kami dan semua
malaikat–malaikat :&lt;/p>
&lt;ul>
    &lt;li>Malaikat Perang&lt;/li>
    &lt;li>Malaikat penerobos&lt;/li>
    &lt;li>Malaikat pengawal berkat&lt;/li>
    &lt;li>Malaikat penuaian dan lawatan jiwa&lt;/li>
    &lt;li>Malaikat pembawa benih&lt;/li>
    &lt;li>Malaikat kekudusan&lt;/li>
    &lt;li>Malaikat keadilan&lt;/li>
    &lt;li>Malaikat pujian dan penyembahan&lt;/li>
    &lt;li>Malaikat karakter dan kabod&lt;/li>
    &lt;li>Malaikat perjanjian&lt;/li>
    &lt;li>Malaikat kelimpahan&lt;/li>
    &lt;li>Malaikat pengangkatan&lt;/li>
    &lt;li>Malaikat manifest&lt;/li>
&lt;/ul>
&lt;p>Hamba minta ijin Tuhan mengutus mereka
disemua pekerjaan kami :&lt;/p>
&lt;ul>
    &lt;li>Mengutus mereka bicara&lt;/li>
    &lt;li>Mengutus mereka mengajar&lt;/li>
    &lt;li>Mengutus mereka buka jalan&lt;/li>
    &lt;li>Mengutus mereka mengambil berkat&lt;/li>
    &lt;li>Mengutus mereka menopang kami&lt;/li>
    &lt;li>Mengutus mereka membawa kami sampai destiny tuntas dan genap.&lt;/li>
&lt;/ul>
&lt;p>Semua kami aktifkan di dalam nama Tuhan
Yesus Kristus.&lt;/p>
&lt;h4>&lt;font color=#F25F5C>3. AMBIL YANG ILAHI &lt;/h4>&lt;/font>
&lt;p>Kami ambil cinta yang baru, kekuatan yang baru,
kesehatan yang sempurna, kelimpahan,
kemampuan menjarah sampai semua destiny
Tuhan tuntas dan genap. Kami ambil semua
yang Ilahi, Hikmat, Beyond Human, Perkenanan,
Powerful skills, Ide - ide yang ajaib, Berkat
Kelimpahan, semua terobosan dan warisan
rohani kami. KAMI AMBIL DAN AKTIFKAN : &lt;/p>
&lt;ul>
    &lt;li>Sayap IMAN&lt;/li>
    &lt;li>Sayap Kemuliaan&lt;/li>
    &lt;li>Sayap Anugerah&lt;/li>
    &lt;li>Sayap Kekudusan&lt;/li>
    &lt;li>Sayap HINENI&lt;/li>
    &lt;li>Sayap Penyembahan&lt;/li>
    &lt;li>Sayap CINTA&lt;/li>
    &lt;li>Sayap UNITY&lt;/li>
    &lt;li>Sayap Kesembuhan&lt;/li>
    &lt;li>Sayap Kelimpahan&lt;/li>
    &lt;li>Sayap Keintiman&lt;/li>
    &lt;li>Sayap PELANGI&lt;/li>
    &lt;li>Sayap Perjanjian&lt;/li>
    &lt;li>Sayap DESTINY&lt;/li>
    &lt;li>Sayap Keajaiban&lt;/li>
    &lt;li>Sayap Kerelaan&lt;/li>
    &lt;li>Sayap Percepatan&lt;/li>
&lt;/ul>
&lt;p>Kami aktifkan semua senjata–senjata dan
jubah–jubah kami, berfungsi dan bekerja sempurna
sampai seluruh bumi penuh kemuliaan Tuhan dan
sampai setiap lutut bertelut dan sampai semua lidah
mengaku Yesus Kristus adalah Tuhan. Dan sampai
seluruh janji Tuhan genap, tuntas, segera dan
sempurna. Dalam nama Tuhan Yesus Kristus.&lt;/p>
&lt;b>AMIN 7x&lt;/b>
    </string>
</resources>