<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="isEmpty"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".declaration.DeclarationListActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16sdp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/Manrope.SemiBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/declaration"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ic_fav"
                    app:layout_constraintStart_toEndOf="@id/btn_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ic_fav"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_fav_selected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_title"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <EditText
            android:id="@+id/et_search"
            style="@style/Manrope.Reguler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/edittext_grey_background_border_grey"
            android:drawableEnd="@drawable/ic_search"
            android:hint="@string/search_declaration"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_declaration"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search"
            tools:listitem="@layout/item_declaration" />

        <LinearLayout
            android:id="@+id/ly_not_found"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{isEmpty ? View.VISIBLE : View.GONE, default = visible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/search" />

            <TextView
                style="@style/Manrope.SemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:text="@string/ops"
                android:textAlignment="center"
                android:textSize="@dimen/_20ssp" />

            <TextView
                style="@style/Manrope.SemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_32sdp"
                android:text="@string/search_declaration_not_found"
                android:textAlignment="center" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>